Implemented dispatch value return, added buffer utils, added buffer tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ crate-type = ["cdylib"]
 [dependencies]
 thiserror = "2.0.11"
 nvim-api-helper = { path = "../nvim-api-helper" }
+# nvim-rig = { path = "../nvim-rig" }
